--- a/application/static/style/style.css
+++ b/application/static/style/style.css
@@ -248,12 +248,8 @@ span {
     line-height: 70px;
 }
 
-.ct-menuMobile.nav-collapse.navbar-collapse.collapse.in{
-    opacity: 1;
-    overflow: scroll;
-    z-index: 1;
 
-}
+
 #ct-js-wrapper{
     -webkit-transition: all .3s ease-out;
     -o-transition: all .3s ease-out;
@@ -282,11 +278,417 @@ span {
     left: auto;
 }
 
-.collapsing {
-    -webkit-transition: all .5s ease-out;
-    -o-transition: all .5s ease-out;
-    transition: all .5s ease-out;
+
+
+.snapjs-right .ct-menuMobile {
+     opacity: 1;
+    overflow: scroll;
+    z-index: 1;
+
 }
+
+
+.ct-u-paddingBottom80 {
+    padding-bottom: 80px !important;
+}
+
+.ct-sectionHeader {
+    padding-top: 60px;
+    padding-bottom: 60px;
+    text-align: center !important;
+}
+
+
+.ct-u-paddingBottom20 {
+    padding-bottom: 20px !important;
+}
+
+
+
+.ct-sectionHeader h2 {
+    font-size: 55px;
+    text-transform: uppercase;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    letter-spacing: -2px;
+
+}
+
+
+.ct-pageHeader, .navbar-nav > li > a, h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6,
+.ct-widget-recentPortfolio-titleContent, .widget .widget-inner > ul li a,
+.ct-graphBox .ct-graphBox--default .ct-graphBox-graph .ct-graphBox-graphPercentage,
+.ct-articleBox .ct-articleBox-date, .ct-articleBox .ct-articleBox-button,
+.ct-articleBox .ct-articleBox-meta, blockquote footer,
+.ct-flexslider-imageDescription .ct-flexslider-imageDescriptionTitle,
+.ct-gallery-itemDescription .ct-gallery-itemDescription-title,
+.ct-gallery-itemDescription .ct-gallery-itemDescription-category,
+.ct-galleryAjax-itemDescription, .ct-galleryAjax-item .ct-galleryAjax-item-number span,
+.panel-title, .pagination > li > a, .pagination > li > span, .ct-pagination-notice,
+.btn, .dropcap:first-child:first-letter, .ct-pagination .ct-pagination-prev,
+.ct-pagination .ct-pagination-next, .ct-pagination .ct-pagination-middle,
+.intro-effect-jam3 .ct-intro-title h1, .ct-intro--fadeOut .ct-intro-title h1,
+.ct-intro--effectPush .ct-intro-title h1, .ct-intro--sliced .ct-intro-title h1,
+.ct-navbar-search, input, .progress .progress-bar, .ct-twitter .tweet_time, body {
+    font-family: 'Source Sans Pro', sans-serif;
+}
+
+h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
+    color: #4c505e;
+}
+.form-group {
+    position: relative;
+    margin-bottom: 20px;
+}
+
+
+.form-control {
+    -webkit-border-top-right-radius: 0;
+    -webkit-border-bottom-right-radius: 0;
+    -webkit-border-bottom-left-radius: 0;
+    -webkit-border-top-left-radius: 0;
+    -moz-border-radius-topright: 0;
+    -moz-border-radius-bottomright: 0;
+    -moz-border-radius-bottomleft: 0;
+    -moz-border-radius-topleft: 0;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+    border-top-left-radius: 0;
+    -moz-background-clip: padding-box;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    font-size: 15px;
+    height: 47px;
+    margin-bottom: 10px;
+    border-color: #b3b3b3;
+}
+
+.form-group label {
+    font-size: 16px;
+    padding-bottom: 10px;
+    color: #5f5f5f;
+    line-height: 1;
+    font-weight: 600;
+    -webkit-transition: all 0.2s ease;
+    -moz-transition: all 0.2s ease;
+    -o-transition: all 0.2s ease;
+    transition: all 0.2s ease;
+}
+
+.ct-checkbox {
+    margin-left: 10px;
+    text-transform: none !important;
+}
+
+
+
+.btn-motive:hover, .btn-motive:disabled:hover,
+.btn-motive:active, .btn-motive:disabled:active, .btn-motive:focus,
+.btn-motive:disabled:focus {
+    background-color: #1f8bf3;
+    border-color: #1f8bf3;
+}
+
+.btn:hover {
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+}
+
+
+
+.btn {
+    -webkit-animation-duration: 2s;
+    animation-duration: 2s;
+    border-radius: 0;
+    line-height: 50px;
+    border: none;
+    border-bottom: 4px solid;
+    text-transform: uppercase;
+    padding: 0 15px;
+    color: #ffffff;
+    display: inline-block;
+    position: relative;
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+}
+
+button, button:hover, button:focus, button:active, .btn {
+    outline: none !important;
+    outline-offset: 0;
+}
+.btn-motive, .btn-motive:disabled {
+    background-color: #1f8bf3;
+    border-color: #1175d6;
+}
+
+input[type=submit] {
+
+    font-size: 16px;
+    font-weight: 600;
+    color: #ffffff !important;
+    -webkit-transition-duration: 0.3s;
+
+}
+
+
+
+/*media section-------------------------------------------------------------------------*/
+
+
+.ct-mediaSection {
+    background-color: #111111;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    overflow: hidden;
+    width: 100%;
+    position: relative;
+}
+
+.ct-flexslider--mainSlider {
+    position: relative;
+}
+.flexslider {
+    background-color: transparent;
+    border: none;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+}
+.ct-u-marginBoth0 {
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
+}
+
+.flexslider {
+    background: #fff;
+    border: 4px solid #fff;
+    position: relative;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -o-border-radius: 4px;
+    border-radius: 4px;
+    -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+    -o-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+    zoom: 1;
+}
+.flexslider {
+    margin: 0;
+    padding: 0;
+}
+
+
+.ct-flexslider--fw .ct-flexslider-progress {
+    width: 100%;
+}
+@media (max-width: 1199px){
+.ct-flexslider-progress {
+    width: 100%;
+}}
+
+
+.ct-flexslider-progress {
+    background: rgba(225, 225, 225, 0.2);
+    height: 6px;
+    position: relative;
+    width: 1230px;
+    margin: 0 auto;
+}
+
+.ct-flexslider-progressBar {
+    background: #1f8bf3;
+    height: 6px;
+    width: 0;
+}
+
+.ct-flexslider--fw .flex-viewport, .ct-flexslider--fw .slides {
+    height: 100%;
+}
+
+.flexslider .flex-viewport {
+    max-height: 2400px;
+}
+
+.flex-viewport {
+    max-height: 2000px;
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    transition: all 1s ease;
+}
+
+
+.ct-flexslider--fw .flex-viewport, .ct-flexslider--fw .slides {
+    height: 100%;
+}
+
+.flexslider .slides {
+    zoom: 1;
+}
+
+.slides, .flex-control-nav, .flex-direction-nav {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.flexslider ul.slides > li {
+    position: relative;
+    -webkit-transition: all 0.4s ease;
+    -moz-transition: all 0.4s ease;
+    -o-transition: all 0.4s ease;
+    transition: all 0.4s ease;
+}
+
+.flexslider .slides > li {
+    display: none;
+    -webkit-backface-visibility: hidden;
+}
+
+.ct-flexslider--mainSlider li {
+    background-size: cover;
+}
+
+
+
+.flex-direction-nav .flex-next {
+    right: -50px;
+    text-align: right;
+}
+
+
+
+
+
+
+.ct-flexslider--mainSlider .flex-control-nav {
+    position: absolute;
+    bottom: -1%;
+    right: -29%;
+    margin: 0 auto;
+}
+
+
+
+
+
+.ct-flexslider--mainSlider .flex-control-nav li a {
+    z-index: 1000;
+}
+
+.ct-flexslider--mainSlider li {
+    background-size: cover;
+}
+
+.flexslider .flex-control-paging li a {
+    background-color: #b3b3b3;
+    border: none;
+    width: 16px;
+    height: 16px;
+    position: relative;
+}
+
+
+
+.flex-control-paging li a {
+
+
+
+}
+
+
+.ct-flexslider--controls3 .flex-control-paging {
+    -moz-opacity: 0.95;
+    -khtml-opacity: 0.95;
+    -webkit-opacity: 0.95;
+    opacity: 0.95;
+    -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=95);
+    filter: alpha(opacity=95);
+    bottom: 5%;
+    right: auto;
+}
+
+
+
+
+
+.ct-flexslider--controls3 .flex-control-paging li a {
+    background: #ffffff;
+    border: 2px solid #3a3f4d;
+    margin: 3px;
+
+}
+
+.flex-control-paging li a.flex-active {
+    box-shadow: 0px 0px 0px 2px #ffffff inset;
+}
+
+.slides:after {
+    content: "\0020";
+    display: block;
+    clear: both;
+    visibility: hidden;
+    line-height: 0;
+    height: 0;
+}
+
+
+
+.flex-control-paging li a {
+    text-indent: 9999px;
+}
+
+
+.flex-direction-nav a.flex-next:before {
+    content: '\f002';
+}
+.flexslider .flex-direction-nav a{
+    text-shadow: none;
+    color: #ffffff;
+    line-height: 40px;
+}
+
+
+
+.flex-direction-nav .flex-prev {
+    left: -50px;
+}
+
+.flexslider:hover .flex-prev:hover {
+    opacity: 1;
+}
+
+.flexslider:hover .flex-prev {
+    opacity: 0.7;
+    left: 10px;
+}
+
+.flex-direction-nav a:before {
+    color: #ffffff;
+}
+
+
+@media (max-width: 768px){
+.ct-mediaSection {
+    width: 100%;
+    display: block !important;
+}}
+
+@media (max-width: 1199px){
+.ct-flexslider-progress {
+    width: 100%;
+}}
+
 
 /*.hiddenfile {*/
     /*position: fixed;*/
