--- a/application/templates/security/login_user.html
+++ b/application/templates/security/login_user.html
@@ -1,24 +1,38 @@
 {% extends "base.html" %}
 {% from "security/_macros.html" import render_field_with_errors, render_field %}
-{% block body %}
 {% from "security/_macros.html" import render_field_with_errors, render_field %}
 {% include "security/_messages.html" %}
-<h1>{{ _('Login') }}</h1>
+{% block body %}
+ <section class="ct-u-paddingBottom80">
+<div class="container">
+    <div class="ct-sectionHeader ct-u-paddingBottom20">
+        <h2>login</h2>
+    </div>
+    <div class="row">
+        <div class="col-xs-offset-1 col-xs-10">
+
+
+
 <form action="{{ url_for_security('login') }}" method="POST" name="login_user_form">
   {{ login_user_form.hidden_tag() }}
-  {{ render_field_with_errors(login_user_form.email) }}
-  {{ render_field_with_errors(login_user_form.password) }}
-  {{ render_field_with_errors(login_user_form.remember) }}
+    <div class="form-group">
+        {{ render_field_with_errors(login_user_form.email, class="form-control") }}
+
+
+  {{ render_field_with_errors(login_user_form.password, class="form-control") }}
+  {{ render_field_with_errors(login_user_form.remember, class="ct-checkbox") }}
   {{ render_field(login_user_form.next) }}
-  {{ render_field(login_user_form.submit) }}g
+  {{ render_field(login_user_form.submit, class="btn btn-motive", value="login now") }}
+  </div>
 </form>
-{% include "security/_menu.html" %}
+
+ </div>
+</div>
+</div>
 
 
 
 
 
-
-
-
+</section>
 {% endblock %}
