--- a/application/templates/helpers.html
+++ b/application/templates/helpers.html
@@ -2,107 +2,179 @@
 
 {#all comment to post on page "single_post"#}
 {% macro post_comment_macro(comment, dict_like) -%}
-    <div class="one_comment" id="comment{{ comment.id }}">
+    <div id="comment{{ comment.id }}">
+        <div class="left-image">
         {% if current_user.avatar.min %}
-            <a href="{{ url_for("user", username=comment.com_author.username) }}"> <img
-                    src="{{ url_for('static',filename="media/" + comment.com_author.avatar_min) }}"
-                    class="leftimg"/></a>
+             <img class="img-inherited" src="{{ url_for('static',filename="media/" + comment.com_author.avatar_min) }}"/>
+        {% else %}
+             <img src="{{ url_for('static',filename="media/" + "min_icon-user-default.png") }}" width="40px"/>
         {% endif %}
-        <div class="description">
-            {% if comment.image %}
-                <img src="{{ url_for('static',filename="media/" + comment.image) }}" class="leftimg"/>
-            {% endif %}
-
-            <span class="comment_text">
-                                {{ comment.text }}
-                            </span><br>
-            <p class="under_comment">
-                {% if current_user.is_authenticated %}
-
-                    {% if dict_like[comment.id] %}
-
-                        <div class="smile-container">
-                            <div class="parent_div">
-
-                                {{ popup_div_macro(comment.id, "like_comment ") }}
-
-                                {% if dict_like[comment.id] == "like" %}
-                                    <img class="liked" src="{{ url_for('static',filename="image/like_smile.png" ) }}"
-                                         obj_id={{ comment.id }} url = "like_comment" />
-
-                                {% elif dict_like[comment.id] == "unlike" %}
-                                    <img class="liked" src="{{ url_for('static',filename="image/unlike_smile.png" ) }}"
-                                         obj_id={{ comment.id }} url = "like_comment"  />
-
-                                {% elif dict_like[comment.id] == "funny" %}
-                                    <img class="liked" src="{{ url_for('static',filename="image/funny.png" ) }}"
-                                         obj_id={{ comment.id }} url = "like_comment" />
-
-
-                                {% elif dict_like[comment.id] == "angry" %}
-                                    <img class="liked" src="{{ url_for('static',filename="image/angry.png" ) }}"
-                                         obj_id="{{ comment.id }}" url = "like_comment"  />
-
-
-                                {% endif %}
-                            </div>
-                        </div>
-
-                    {% else %}
-
-                        <div class="smile-container">
-                            <div class="parent_div">
-
-                                {{ popup_div_macro(comment.id, "like_comment ") }}
-                                <img class="unliked" src="{{ url_for('static',filename="image/gray.png" ) }}"
-                                     url="like_comment" obj_id="{{ comment.id }}"/>
-                            </div>
-                        </div>
-
-                    {% endif %}
-                    <span id="like_count_like_comment_{{ comment.id }}">{{ comment.like_count }} </span>
-                    <img class="smile" src="{{ url_for('static',filename="image/like_smile.png" ) }}" width=20/>
-                    <span id="unlike_count_like_comment_{{ comment.id }}">{{ comment.unlike_count }} </span>
-                    <img class="smile" src="{{ url_for('static',filename="image/unlike_smile.png" ) }}" width=20/>
-                    <span id="funny_count_like_comment_{{ comment.id }}">{{ comment.funny_count }} </span>
-                    <img class="smile" src="{{ url_for('static',filename="image/funny.png" ) }}" width=20/>
-                    <span id="angry_count_like_comment_{{ comment.id }}">{{ comment.angry_count }} </span>
-                    <img class="smile" src="{{ url_for('static',filename="image/angry.png" ) }}" width=20/>
-
-                {% else %}
-                    <span>{{ comment.like_count }}</span>&nbsp;
-                    <img class="anon_like" src="{{ url_for('static',filename="image/white.png" ) }}"
-                         width="20"/>
-                {% endif %}
-
-
-            <span class="comment_inf">
-                                Comment by {{ comment.com_author.username }} [{{ comment.timestamp }}]
-                            </span>
-            {% if current_user != comment.com_author %}
-                <span class="discussion" id="{{ comment.id }}"
-                      user="{{ comment.com_author.username }}"
-                      post_id = "{{ comment.post_id }}"  >Discussion</span>
-                <div class=answer id="answer{{ comment.id }}" style="display: none">
-
-                </div>
-            {% endif %}
-            </p>
         </div>
-        {% if current_user == comment.com_author %}
-            {{ comment.id }}
-            <div class="btn-group btn-xs post_com_edit" id="edit{{ comment.id }}">
-                <button type="button" class="btn btn-default btn-xs dropdown-toggle " data-toggle="dropdown">Edit <span
-                        class="caret"></span></button>
-                <ul class="dropdown-menu" role="menu">
-                    <li><a href="#" onclick="edit_comment(event, {{ comment.id }}, '/edit_post_comment');">edit</a></li>
-                    <li><a href="#"
-                           onclick="delete_comment(event, {{ comment.id }}, '/delete_post_comment');">delete</a></li>
+        <div class="description">
 
-                </ul>
+            <p class="ct-u-paddingBottom5">
+                <span>{{ comment.com_author.username }} </span>
+                -{{ comment.timestamp|datetime }}
+
+            </p>
+            <p>
+                {% if comment.image %}
+                    <img class="img-inherited" src="{{ url_for('static',filename="media/" + comment.image) }}"/>
+                {% endif %}
+                {{ comment.text }}
+
+            </p>
+            <div class="reaction-counter">
+                <span id="like_count_like_post_{{post.id}}">{{ post.like_count }} </span><img class="smile" src="{{ url_for('static',filename="image/reaction-like.png" )}}" width=20/>
+                <span id="unlike_count_like_post_{{post.id}}">{{ post.unlike_count }} </span><img class="smile" src="{{ url_for('static',filename="image/reaction-unlike.png" )}}" width=20/>
+                <span id="funny_count_like_post_{{post.id}}">{{ post.funny_count }} </span><img class="smile" src="{{ url_for('static',filename="image/reaction-funny.png" )}}" width=20/>
+                <span id="angry_count_like_post_{{post.id}}">{{ post.angry_count }} </span><img class="smile" src="{{ url_for('static',filename="image/reaction-angry.png" )}}" width=20/>
+
             </div>
 
-        {% endif %}
+                    <div class="under-box">
+                        {{ popup_div_macro(post.id, "like_post ") }}
+                        <div class="reaction-button">
+                            <ul class="like-left like-inline">
+                                <li>
+                                    {% if current_user.is_authenticated %}
+
+                                        {% if post_liked %}
+
+                                            {% if post_liked.type == "like"%}
+                                                <img class="liked" src="{{ url_for('static',filename="image/reaction-like.png" )}}"
+                                                    obj_id={{post.id}} url = "like_post" />
+
+                                            {% elif post_liked.type == "unlike"%}
+                                                <img class="liked" src="{{ url_for('static',filename="image/reaction-unlike.png" )}}"
+                                                    obj_id={{post.id}} url = "like_post"  />
+
+                                            {% elif post_liked.type == "funny"%}
+                                                <img class="liked" src="{{ url_for('static',filename="image/reaction-funny.png" )}}"
+                                                    obj_id={{post.id}} url = "like_post" />
+
+                                            {% elif post_liked.type == "angry"%}
+                                                <img class="liked" src="{{ url_for('static',filename="image/reaction-angry.png" )}}"
+                                                    obj_id={{post.id}} url = "like_post"  />
+                                            {% endif %}
+                                        {% else %}
+                                            <img class="unliked"  src="{{ url_for('static',filename="image/reaction-like.png" )}}"
+                                                                     url = "like_post" obj_id={{post.id}} />
+
+                                        {% endif%}
+                                    {% endif %}
+                                </li>
+                                <li><h4>like</h4></li>
+                            </ul>
+                        </div>
+                        <div id="button_comment1" class="comment-button">
+                            <ul>
+                                <li>
+                                    <i class="fa fa-comments-o" aria-hidden="true"></i>
+                                </li>
+                                <li><h4>comment</h4></li>
+                            </ul>
+                        </div>
+                        <div class="favourite-button">
+                            <ul>
+                                <li>
+                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                </li>
+                                <li><h4>Add to fav</h4></li>
+                            </ul>
+                        </div>
+                    </div>
+
+        </div>
+
+
+{#            <p class="under_comment">#}
+{#                {% if current_user.is_authenticated %}#}
+{##}
+{#                    {% if dict_like[comment.id] %}#}
+{##}
+{#                        <div class="smile-container">#}
+{#                            <div class="parent_div">#}
+{##}
+{#                                {{ popup_div_macro(comment.id, "like_comment ") }}#}
+{##}
+{#                                {% if dict_like[comment.id] == "like" %}#}
+{#                                    <img class="liked" src="{{ url_for('static',filename="image/like_smile.png" ) }}"#}
+{#                                         obj_id={{ comment.id }} url = "like_comment" />#}
+{##}
+{#                                {% elif dict_like[comment.id] == "unlike" %}#}
+{#                                    <img class="liked" src="{{ url_for('static',filename="image/unlike_smile.png" ) }}"#}
+{#                                         obj_id={{ comment.id }} url = "like_comment"  />#}
+{##}
+{#                                {% elif dict_like[comment.id] == "funny" %}#}
+{#                                    <img class="liked" src="{{ url_for('static',filename="image/funny.png" ) }}"#}
+{#                                         obj_id={{ comment.id }} url = "like_comment" />#}
+{##}
+{##}
+{#                                {% elif dict_like[comment.id] == "angry" %}#}
+{#                                    <img class="liked" src="{{ url_for('static',filename="image/angry.png" ) }}"#}
+{#                                         obj_id="{{ comment.id }}" url = "like_comment"  />#}
+{##}
+{##}
+{#                                {% endif %}#}
+{#                            </div>#}
+{#                        </div>#}
+{##}
+{#                    {% else %}#}
+{##}
+{#                        <div class="smile-container">#}
+{#                            <div class="parent_div">#}
+{##}
+{#                                {{ popup_div_macro(comment.id, "like_comment ") }}#}
+{#                                <img class="unliked" src="{{ url_for('static',filename="image/gray.png" ) }}"#}
+{#                                     url="like_comment" obj_id="{{ comment.id }}"/>#}
+{#                            </div>#}
+{#                        </div>#}
+{##}
+{#                    {% endif %}#}
+{#                    <span id="like_count_like_comment_{{ comment.id }}">{{ comment.like_count }} </span>#}
+{#                    <img class="smile" src="{{ url_for('static',filename="image/like_smile.png" ) }}" width=20/>#}
+{#                    <span id="unlike_count_like_comment_{{ comment.id }}">{{ comment.unlike_count }} </span>#}
+{#                    <img class="smile" src="{{ url_for('static',filename="image/unlike_smile.png" ) }}" width=20/>#}
+{#                    <span id="funny_count_like_comment_{{ comment.id }}">{{ comment.funny_count }} </span>#}
+{#                    <img class="smile" src="{{ url_for('static',filename="image/funny.png" ) }}" width=20/>#}
+{#                    <span id="angry_count_like_comment_{{ comment.id }}">{{ comment.angry_count }} </span>#}
+{#                    <img class="smile" src="{{ url_for('static',filename="image/angry.png" ) }}" width=20/>#}
+{##}
+{#                {% else %}#}
+{#                    <span>{{ comment.like_count }}</span>&nbsp;#}
+{#                    <img class="anon_like" src="{{ url_for('static',filename="image/white.png" ) }}"#}
+{#                         width="20"/>#}
+{#                {% endif %}#}
+{##}
+{##}
+{#            <span class="comment_inf">#}
+{#                                Comment by {{ comment.com_author.username }} [{{ comment.timestamp }}]#}
+{#                            </span>#}
+{#            {% if current_user != comment.com_author %}#}
+{#                <span class="discussion" id="{{ comment.id }}"#}
+{#                      user="{{ comment.com_author.username }}"#}
+{#                      post_id = "{{ comment.post_id }}"  >Discussion</span>#}
+{#                <div class=answer id="answer{{ comment.id }}" style="display: none">#}
+{##}
+{#                </div>#}
+{#            {% endif %}#}
+{#            </p>#}
+{#        </div>#}
+{#        {% if current_user == comment.com_author %}#}
+{#            {{ comment.id }}#}
+{#            <div class="btn-group btn-xs post_com_edit" id="edit{{ comment.id }}">#}
+{#                <button type="button" class="btn btn-default btn-xs dropdown-toggle " data-toggle="dropdown">Edit <span#}
+{#                        class="caret"></span></button>#}
+{#                <ul class="dropdown-menu" role="menu">#}
+{#                    <li><a href="#" onclick="edit_comment(event, {{ comment.id }}, '/edit_post_comment');">edit</a></li>#}
+{#                    <li><a href="#"#}
+{#                           onclick="delete_comment(event, {{ comment.id }}, '/delete_post_comment');">delete</a></li>#}
+{##}
+{#                </ul>#}
+{#            </div>#}
+{##}
+{#        {% endif %}#}
     </div>
 {%- endmacro %}
 
@@ -444,13 +516,13 @@
 {#generate div with four different reaction when mouse hover on smile#}
 {% macro popup_div_macro(id, url) -%}
     <div class="popup-div" obj_id={{ id }} url={{ url }}>
-        <img class="smile" src="{{ url_for('static',filename="image/like_smile.png" ) }}" obj_id={{ id }} width="40"
+        <img class="smile" src="{{ url_for('static',filename="image/reaction-like.png" ) }}" obj_id={{ id }} width="40"
              type="like" url={{ url }}/>
-        <img class="smile" src="{{ url_for('static',filename="image/unlike_smile.png" ) }}" obj_id={{ id }} width="40"
+        <img class="smile" src="{{ url_for('static',filename="image/reaction-unlike.png" ) }}" obj_id={{ id }} width="40"
              type="unlike" url={{ url }}/>
-        <img class="smile" src="{{ url_for('static',filename="image/funny.png" ) }}" obj_id={{ id }} width="40"
+        <img class="smile" src="{{ url_for('static',filename="image/reaction-funny.png" ) }}" obj_id={{ id }} width="40"
              type="funny" url={{ url }}/>
-        <img class="smile" src="{{ url_for('static',filename="image/angry.png" ) }}" obj_id={{ id }} width="45"
+        <img class="smile" src="{{ url_for('static',filename="image/reaction-angry.png" ) }}" obj_id={{ id }} width="45"
              type="angry" url={{ url }}/>
     </div>
 {% endmacro %}
